<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_motion_planner</name>
  <version>0.1.1</version>
  <description>This package implements the Motion Planner Server as a lifecycle node managed by the workcell orchestrator.</description>
  <maintainer email="johntan@openrobotics.org">John Tan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nexus_endpoints</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>moveit_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>warehouse_ros_sqlite</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>abb_irb910sc_3_45_moveit_config</test_depend>
  <test_depend>abb_irb910sc_support</test_depend>
  <test_depend>abb_irb1300_10_115_moveit_config</test_depend>
  <test_depend>abb_irb1300_support</test_depend>

  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rmf_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
