<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_network_configuration</name>
  <version>0.1.0</version>
  <description>This package generates zenoh bridge configurations for the NEXUS Network</description>
  <maintainer email="johntan@openrobotics.org">john</maintainer>
  <license>Apache License 2.0</license>

  <depend>python3-jsonschema</depend>
  <depend>python3-yaml</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
