<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_robot_controller</name>
  <version>0.0.1</version>
  <description>ros2_control Server package for NEXUS. Has lifecycle capabilities.</description>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>abb_irb910sc_support</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>rmf_utils</test_depend>
  <test_depend>ros2_control</test_depend>
  <test_depend>ros2_controllers</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
