<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_rviz_plugins</name>
  <version>0.0.1</version>
  <description>JnJ plugins for RViz2</description>
  <maintainer email="ahcorde@openrobotics.org">Alejandro Hernandez</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>nexus_endpoints</depend>
  <depend>nexus_lifecycle_manager</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>rmf_utils</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
