<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_system_orchestrator</name>
  <version>0.1.1</version>
  <description>NEXUS system orchestrator</description>
  <maintainer email="koonpeng@openrobotics.org">Teo Koon Peng</maintainer>
  <license>Apache License 2.0</license>

  <depend>backward_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nexus_lifecycle_manager</depend>
  <depend>nexus_transporter</depend>
  <depend>yaml-cpp</depend>
  <depend>yaml_cpp_vendor</depend>

  <build_depend>nexus_cmake</build_depend>
  <build_depend>nexus_common</build_depend>
  <build_depend>nexus_endpoints</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>rmf_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
