<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_transporter</name>
  <version>0.1.1</version>
  <description>A package for managing systems that offer transportation services</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nexus_endpoints</depend>
  <depend>nexus_orchestrator_msgs</depend>
  <depend>nexus_transporter_msgs</depend>

  <depend>backward_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rmf_api_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_task_ros2</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_utils</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>yaml_cpp_vendor</depend>


  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
